# RAVEN

./: .git_commit_msg.txt  .gitignore  Cargo.toml  EXPLORATION_LOG.md  LICENSE  RAVEN世界第一冲刺计划.md  RAVEN竞品分析与战略报告.md  README.md  _check_v3.bat  _commit_doc.bat  _commit_msg.txt  _commit_v4.bat  _commit_v5.bat  _commit_v6.bat  _commit_v6_1.bat  _commit_v8.bat  _read_head.bat  _run_baseline.bat  adaptive_ef_bench_result.txt  after_result.txt  after_result_v2.txt  align_ab_result.txt  alphalocal16_result.txt  baseline_result.txt  bench_v2_after_2.txt  bench_v2_after_opt12v2_opt13.txt  bench_v2_baseline.txt  bench_v2_baseline_2.txt  build.rs  candidate_recall_result.txt  check_proc.bat  clippy-rules.toml  diff_graph.txt  diff_quick.txt  diff_vamana.txt  diff_working_nav.txt  diff_working_vamana_clean.txt  directional_prune_ab_result.txt  edge_recall_result.txt  ef_po_sweep.txt  (+50 more)
.cargo/: config.toml
.github/workflows/: ci.yml
ann_benchmarks/: test_local.py
ann_benchmarks/algorithms/raven/: Dockerfile  __init__.py  config.yml  module.py  python.rs
benches/: distance_kernels.rs  graph_build.rs
docs/: RAVEN世界第一冲刺计划.md  fix_guide.md  待完成优化清单.md
experiments/: 0b99927_test.txt  1.txt  29a5f0e_greedy_vec.txt  ab_test_no_adef.txt  ab_test_with_adef.txt  adaptive_ef_sweep_result.txt  alphalocal24_result.txt  bench_adef.txt  bench_po0.txt  bench_po12.txt  bench_po4.txt  bench_rr10.txt  bench_rr5.txt  bench_rr8.txt  diff_prune.txt  diff_serialize.txt  diff_working_vamana.txt  directional_bench_result.txt  directional_rmax_scan.txt  directional_rmin_half.txt  ef_po_sweep_result.txt  incremental_timing_result.txt  nav_verify_1m_v3.txt  nav_verify_1m_v91.txt  nav_verify_result.txt  opt_bench_after_cached.txt  opt_bench_after_opt14.txt  opt_bench_after_opt14_v2.txt  opt_bench_after_opt4.txt  opt_bench_after_opt7.txt  opt_bench_after_opt9.txt  opt_bench_before.txt  opt_bench_before_cached.txt  opt_bench_before_opt14_v2.txt  opt_bench_before_v2.txt  opt_bench_cooldown.txt  opt_bench_opt11_12_13.txt  opt_bench_opt15_final_raw.txt  opt_bench_opt15_raw.txt  opt_bench_opt16_v1.txt  (+31 more)
glass-ref/pyglass-main/glass/: common.hpp  graph.hpp  memory.hpp  neighbor.hpp  utils.hpp
glass-ref/pyglass-main/glass/hnsw/: HNSWInitializer.hpp
glass-ref/pyglass-main/glass/hnswlib/: hnswalg.h
glass-ref/pyglass-main/glass/nsg/: nsg.hpp
glass-ref/pyglass-main/glass/quant/: computer.hpp  sq8p_quant.hpp
glass-ref/pyglass-main/glass/searcher/: graph_searcher.hpp  refiner.hpp
glass-ref/pyglass-main/glass/storage/: tensor.hpp
glass-ref/pyglass-main/python/: build_extension.py  debug_check.py  diag_fvecs.py  diag_gt.py  glass.cp312-win_amd64.pyd  glass_sift_result.txt  glass_sift_result_v2.txt  run_sift_bench.py  test_batch_search_format.py
patann-main/ann-benchmarks/ann_benchmarks/algorithms/raven/: Dockerfile  config.yml  module.py
src/: lib.rs  python.rs
src/bench/: mod.rs
src/config/: config.rs  local_bench.rs  mod.rs  params.rs  rules.rs
src/distance/: aligned.rs  avx2.rs  avx512.rs  dispatch.rs  dynamic.rs  f16.rs  kernel.rs  mod.rs  scalar.rs
src/graph/: ablation.rs  adaptive_ef.rs  linear_pool.rs  mod.rs  navigation.rs  quant_aware_prune.rs  refiner.rs  robust_prune.rs  rp_tuning.rs  vamana.rs
src/memory/: graph.rs  mod.rs  query_ctx.rs  serialize.rs  visited.rs
src/quant/: avq.rs  mod.rs  opq.rs  pq.rs  pq4.rs  sq4.rs  sq8.rs
tuning/: SUMMARY.md  ab_navm_result.csv  final_ef_sweep_navm32.csv  phase1_search_params.csv  phase2_graph_params.csv  phase2_rmax_results.csv  sq4_ef_sweep_navm32_rr8.csv
