[package]
name = "raven"
version = "0.8.0"
edition = "2021"
description = "Retrieval-Aware Vector Engine with Navigation - high-performance ANN search"
license = "Apache-2.0"

[lib]
name = "raven"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
# 批量查询模式：feature-gate 隔离，不污染单查询主路径（设计文档第二层）
# 不同查询强行共享 visited 会改变搜索语义，直接损害召回率
batch_mode = []
# AVX-512 内核（Week 7-8，当前预留）
avx512 = []
# big-ann SSD 扩展路径（Week 9+，当前仅预留接口）
big_ann = []
# Python 绑定（PyO3，ann-benchmarks 集成用）
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
# 构建可复现性：ChaCha8 速度快、质量足够、跨平台结果一致（设计文档第四层 F.7）
rand = "0.8"
rand_chacha = "0.3"
# 日志：度数分位数钩子等（设计文档第二层）
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 序列化：CRC32 校验和（设计文档第二层 F.1）
crc32fast = "1.4"
# 配置文件解析（设计文档第六层）
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# 错误处理
thiserror = "1"
# 内存对齐（设计文档第二层，GEMM 缓冲区对齐）
aligned-vec = "0.5"
# 零拷贝字节转换（ann-benchmarks 数据读取）
bytemuck = "1"
# JSON 输出（ann-benchmarks 结果格式）
serde_json = "1"
# 并行建图（Vamana build 并行化，greedy_search 只读可并行）
rayon = "1.10"
# Python 绑定（ann-benchmarks 集成）
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }

[dev-dependencies]
# 微基准：日常迭代用 divan，正式回归用 criterion（设计文档第六层）
divan = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "distance_kernels"
harness = false
path = "benches/distance_kernels.rs"

[[bench]]
name = "graph_build"
harness = false
path = "benches/graph_build.rs"

[profile.release]
# 性能优化：启用 LTO 与 codegen-units=1 以获得最佳向量化效果
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
lto = "fat"
codegen-units = 1

# ───────────────────────────────────────────────────────────────────────
# 性能优化 Clippy 规则
# 详见 clippy-rules.toml 中的完整注释
# ───────────────────────────────────────────────────────────────────────
[lints.rust]
unused_crate_dependencies = "allow"

[lints.clippy]
# ── 全部分组一键全开（~400 条规则） ──
# all:        correctness + suspicious + style + complexity + perf（默认分组）
# pedantic:   ~170 条极致优化规则
# nursery:    ~50 条实验性规则
# restriction: ~90 条限制规则（含 unwrap_used, indexing_slicing, arithmetic 等）
all         = { level = "deny", priority = -1 }
pedantic    = { level = "deny", priority = -1 }
nursery     = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }

# ── 排除：有害 / 无收益 ──

# 有害：热路径必须 #[inline(always)]
inline_always = "allow"

# 有害：禁止 as 转换 — SIMD 指针 cast、usize→u32 节点 ID 全靠 as
as_conversions = "allow"

# 有害：禁止算术副作用 — 高性能库不能用 checked_*
arithmetic_side_effects = "allow"
integer_division = "allow"
float_arithmetic = "allow"
modulo_arithmetic = "allow"

# 有害：禁止 indexing — 热路径用 get_unchecked 绕过边界检查
indexing_slicing = "allow"

# 无收益：const fn 对运行时零收益
missing_const_for_fn = "allow"

# Cast 类：高性能 ANN 中 as 转换是有意设计
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_ptr_alignment = "allow"
ptr_as_ptr = "allow"
borrow_as_ptr = "allow"
ref_as_ptr = "allow"
ptr_cast_constness = "allow"

# 纯文档类（零性能影响）
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
missing_fields_in_debug = "allow"
missing_docs_in_private_items = "allow"
doc_markdown = "allow"
doc_link_with_quotes = "allow"
doc_broken_link = "allow"
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
doc_paragraphs_missing_punctuation = "allow"
missing_inline_in_public_items = "allow"

# 纯命名/风格类（零性能影响）
module_name_repetitions = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
many_single_char_names = "allow"
similar_names = "allow"
struct_field_names = "allow"
fn_params_excessive_bools = "allow"
struct_excessive_bools = "allow"
items_after_statements = "allow"
min_ident_chars = "allow"
single_char_lifetime_names = "allow"
single_call_fn = "allow"

# restriction 风格类（零性能影响）
absolute_paths = "allow"
default_numeric_fallback = "allow"
else_if_without_else = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
mod_module_files = "allow"
self_named_module_files = "allow"
pattern_type_mismatch = "allow"
semicolon_inside_block = "allow"
semicolon_outside_block = "allow"
implicit_return = "allow"
non_ascii_literal = "allow"
print_stdout = "allow"
print_stderr = "allow"
tests_outside_test_module = "allow"
verbose_file_reads = "allow"
unneeded_field_pattern = "allow"
partial_pub_fields = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
pub_without_shorthand = "allow"
question_mark_used = "allow"
renamed_function_params = "allow"
arbitrary_source_item_ordering = "allow"
cfg_not_test = "allow"
create_dir = "allow"
decimal_literal_representation = "allow"
error_impl_error = "allow"
exit = "allow"
field_scoped_visibility_modifiers = "allow"
host_endian_bytes = "allow"
big_endian_bytes = "allow"
little_endian_bytes = "allow"
impl_trait_in_params = "allow"
map_with_unused_argument_over_ranges = "allow"
missing_trait_methods = "allow"
mixed_read_write_in_expression = "allow"
non_zero_suggestions = "allow"
overflow_check_conditional = "allow"
precedence_bits = "allow"
same_name_method = "allow"
unreachable = "allow"
unwrap_in_result = "allow"
use_debug = "allow"
missing_assert_message = "allow"
missing_asserts_for_indexing = "allow"
let_underscore_must_use = "allow"
let_underscore_untyped = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
alloc_instead_of_core = "allow"
needless_raw_strings = "allow"
deref_by_slicing = "allow"
redundant_test_prefix = "allow"
single_char_add_str = "allow"
return_and_then = "allow"
string_lit_chars_any = "allow"
unused_result_ok = "allow"
blanket_clippy_restriction_lints = "allow"

# pedantic/nursery 过度严格
must_use_candidate = "allow"
return_self_not_must_use = "allow"
unnested_or_patterns = "allow"
match_wildcard_for_single_variants = "allow"
match_bool = "allow"
manual_let_else = "allow"
option_option = "allow"
range_minus_one = "allow"
range_plus_one = "allow"
same_functions_in_if_condition = "allow"
if_not_else = "allow"
implicit_hasher = "allow"
inconsistent_struct_constructor = "allow"
index_refutable_slice = "allow"
maybe_infinite_iter = "allow"
iter_not_returning_iterator = "allow"
into_iter_without_iter = "allow"
iter_without_into_iter = "allow"
unused_self = "allow"
no_mangle_with_rust_abi = "allow"
mismatching_type_param_order = "allow"
non_std_lazy_statics = "allow"
checked_conversions = "allow"
use_self = "allow"
wildcard_imports = "allow"
unreadable_literal = "allow"
used_underscore_binding = "allow"
used_underscore_items = "allow"
needless_lifetimes = "allow"
elidable_lifetime_names = "allow"
float_cmp = "allow"
float_cmp_const = "allow"
useless_let_if_seq = "allow"
default_trait_access = "allow"
should_panic_without_expect = "allow"
ignore_without_reason = "allow"
unnecessary_wraps = "allow"
unnecessary_debug_formatting = "allow"
unnecessary_trailing_comma = "allow"
bool_to_int_with_if = "allow"
manual_string_new = "allow"
manual_instant_elapsed = "allow"
ref_option = "allow"
ref_option_ref = "allow"
pub_underscore_fields = "allow"
same_length_and_capacity = "allow"
zero_sized_map_values = "allow"
unnecessary_literal_bound = "allow"

# restriction 噪音规则（零性能影响，大量误报）
unseparated_literal_suffix = "allow"
integer_division_remainder_used = "allow"
undocumented_unsafe_blocks = "allow"
allow_attributes = "allow"
allow_attributes_without_reason = "allow"
unused_trait_names = "allow"
multiple_unsafe_ops_per_block = "allow"
shadow_reuse = "allow"
shadow_unrelated = "allow"
shadow_same = "allow"
unwrap_used = "allow"
expect_used = "allow"
ref_patterns = "allow"
if_then_some_else_none = "allow"
type_complexity = "allow"
module_inception = "allow"
cognitive_complexity = "allow"
unnecessary_safety_comment = "allow"
needless_update = "allow"
